--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "nodemon ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "nodemon -r esm ./index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create-db-tables": "node -r esm db/create_tables.js createAllTables"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
+    "make-runnable": "^1.3.10",
     "pg": "^8.7.1"
   },
   "devDependencies": {
