--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "make-runnable": "^1.3.10",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
