--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node -r esm ./index.js",
     "watch": "nodemon -r esm ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "create-db-tables": "node -r esm db/create_tables.js createAllTables"
