--- a/pipelines/airflow/Dockerfile
+++ b/pipelines/airflow/Dockerfile
@@ -1,4 +1,4 @@
-FROM apache/airflow:2.0.1
+FROM apache/airflow:2.1.2
 
 # USE ROOT TO DOWNLOAD DEPENDENCIES
 USER root
@@ -15,7 +15,10 @@ RUN apt-add-repository 'deb http://security.debian.org/debian-security stretch/u
 RUN apt-get update
 # -------------------------------------------------------------------------------------------------
 RUN apt-get install -y openjdk-8-jdk -y python3-pip -y vim
-RUN pip3 install requests python-decouple python-dotenv pyspark
+#
+#ENV  PATH=/home/airflow/.local/lib/python3.6/site-packages:$PATH
+#RUN #pip3 install --upgrade pip
+RUN pip3 install --no-user --target=/home/airflow/.local/lib/python3.6/site-packages python-decouple python-dotenv pyspark
 
 # IF JAVA_HOME ENV NOT SET ERROR => JAVA_HOME is not set
 ENV JAVA_HOME  /usr/lib/jvm/java-8-openjdk-amd64/
